--- a/resources/scss/components/header.scss
+++ b/resources/scss/components/header.scss
@@ -3,22 +3,25 @@ header {
     color: white;
     padding: 0.5em 1em;
     display: flex;
+    flex-direction: row;
+    align-content: space-between;
+    
 }
 
-.top-menu {
-    flex-grow: 1;
-    display: flex;
+// .top-menu {
+//     flex-grow: 1;
+//     display: flex;
 
-    a {
-        margin-left: 1em;
-        color: white;
+//     a {
+//         margin-left: 1em;
+//         color: white;
 
-        &:first-child {
-            margin-left: 0;
-        }
-    }
+//         &:first-child {
+//             margin-left: 0;
+//         }
+//     }
 
-    .user-info {
-        margin-left: auto;
-    }
-}
+//     .user-info {
+//         margin-left: auto;
+//     }
+// }
