--- a/resources/scss/components/header.scss
+++ b/resources/scss/components/header.scss
@@ -1,71 +1,111 @@
 header {
-    background-color: #e0f7e6;
-    color: #e0f7e6;
+    background-color: #80b0ff;
+    color: black;
     display: flex;
     flex-direction: row;
-    justify-content: space-evenly;
+    justify-content: space-between;
     min-height: 8em;
-    padding: 2em;
     align-items: center;
-
+    height: 10rem;
+    width: 100%;
+    margin: 0%;
+    
 
     .title-logo {
-        width: 20%;
-        height: 20rem;
-        //background-color: #5e6668;
-        color: #5e6668;
+        width: 15%;
+        height: 100%;
+        margin: 0%;
+        color: black;
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-content: center;
+        position: relative;
         img{
-          width: 5rem;
-          height: 5rem;
+          width: 7rem;
+          height: 7rem;
+          justify-self: center;
+          position: relative;
+          top: 2rem;
+          left: 30%;
+        }
+        h5{
+          text-align: center;
+          font-weight: 700;
         }
     }
 
     .title-center {
         width: 60%;
-        height: 20rem;
-        //background-color: #5e6668;
-        color: #5e6668;
+        height: 100%;
         display: flex;
         flex-direction: column;
-        justify-items: center;
+        justify-content: center;
         align-items: center;
+          .title-center-city{
+            height: 3rem;
+            display: flex;
+            flex-direction: row;
+            justify-items: center;
+            align-items: center;
+            margin: 1rem;
+            h2 {
+              font-size: 3rem;
+              font-weight: 900;
+            }
+            select{
+              height: 1.3rem; 
+              margin: 1rem;
+              align-self: flex-start;
+            }
+        }
     }
 
       
     nav {
-        width: 20%;
-        height: 20rem;
-        //background-color: #5e6668;
-        color: #5e6668;
+        width: 15%;
+        height: 100%;
         display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-content: center;
+        flex-direction: row;
+        align-items: center;
+        font-weight: 900;
+        margin: 1rem;
+        .createlisting{
+          margin: 0.5rem;
+          height: 6rem;
+          width: 6rem;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          text-align: center;
+          .create-new-listing {
+            font-weight: 900;
+          }
+        }
+          .user{
+            margin: 0.5rem;
+            height: 6rem;
+            width: 10rem;
+            border-radius: 5px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            text-align: center;
+          }
+          a{
+            color: black;
+            text-decoration: none; 
+            .login{
+              align-self: stretch;
+              color: black;
+              text-decoration: none;
+              font-weight: 900;
+            }
+          }
+        
+        
     }
  
   }
   
-//  header h1 {
-//     /* font-size: 14px; */
-//     line-height: 0.8em;
-//     font-weight: 300;
-//     margin: 0 auto 0 0;
-//     text-align: left;
-//   }
-  
-//   header nav {
-//     display: flex;
-//     align-self: stretch;
-//   }
-  
-  header nav a {
-    align-self: stretch;
-    color: #5e6668;
-    text-decoration: none;
-    margin: 0 1em;
-    border-bottom: 1px solid #a9e8db;
-  }
+
