--- a/resources/scss/flamel-main.scss
+++ b/resources/scss/flamel-main.scss
@@ -1,8 +1,24 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,700&amp;subset=latin-ext');
 @import 'components/header.scss';
+@import 'components/index.scss';
 @import 'components/footer.scss';
+@import 'components/login.scss';
+@import 'components/register.scss';
+@import 'components/createlisting.scss';
 
 * {
   box-sizing: border-box;
+}
 
+#app{
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+body{
+  margin: 0;
+}
+main{
+  flex-grow: 1;
 }
