--- a/resources/scss/components/header.scss
+++ b/resources/scss/components/header.scss
@@ -78,6 +78,7 @@ header {
           justify-content: center;
           align-items: center;
           text-align: center;
+          border: 5px, solid, blue;
           .create-new-listing {
             font-weight: 900;
           }
