--- a/public/css/flamel-main.css
+++ b/public/css/flamel-main.css
@@ -132,15 +132,15 @@ footer nav .contact {
 }
 
 label {
-  color: red;
+  color: blue;
 }
 
 label {
-  color: red;
+  color: blue;
 }
 
 label {
-  color: red;
+  color: blue;
 }
 
 * {
