--- a/public/css/flamel-main.css
+++ b/public/css/flamel-main.css
@@ -135,8 +135,15 @@ label {
   color: blue;
 }
 
-label {
-  color: blue;
+.register {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+.register img {
+  height: 30rem;
+  width: 25rem;
 }
 
 label {
