--- a/resources/scss/components/register.scss
+++ b/resources/scss/components/register.scss
@@ -1,3 +1,10 @@
-label {
-    color: blue;
+.register {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    img{
+        height: 30rem;
+        width: 25rem;
+    }
 }
