--- a/resources/scss/components/footer.scss
+++ b/resources/scss/components/footer.scss
@@ -1,7 +1,7 @@
 footer {
-    height: 6rem;
+    height: 7rem;
     width: 100%;
-    background-color: #80b0ff;
+    background-color: #80c9dd;
     display: flex;
     flex-direction: column;
     justify-content: center;
