--- a/resources/scss/components/showoffers.scss
+++ b/resources/scss/components/showoffers.scss
@@ -1,6 +1,6 @@
-.login-form{
+.offer-detail{
     height: auto;
-    width: 20rem;
+    width: 15rem;
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -9,5 +9,6 @@
     background-color: rgba($color: lightgrey, $alpha: 0.7);
     border: 5px solid #62bbd3;
     border-radius: 30px;
-    padding: 2rem;
+    padding: 0.5rem;
+    margin:0.5rem;
 }
