--- a/resources/scss/flamel-main.scss
+++ b/resources/scss/flamel-main.scss
@@ -4,6 +4,8 @@
 @import 'components/login.scss';
 @import 'components/register.scss';
 @import 'components/createlisting.scss';
+@import 'components/showoffers.scss';
+@import 'components/showrequests.scss';
 
 * {
   box-sizing: border-box;
@@ -14,10 +16,33 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  align-content: center;
 }
 body{
   margin: 0;
 }
+
+$color2: #80c9dd;
+$color3: #d5eaf0;
+$color1: #62bbd3;
 main{
-  flex-grow: 1;
+  // flex-grow: 1;
+  height:63rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: $color1;
+  background-image: linear-gradient(30deg, $color2 12%, transparent 12.5%, transparent 87%, $color2 87.5%, $color2),
+  linear-gradient(150deg, $color2 12%, transparent 12.5%, transparent 87%, $color2 87.5%, $color2),
+  linear-gradient(30deg, $color2 12%, transparent 12.5%, transparent 87%, $color2 87.5%, $color2),
+  linear-gradient(150deg, $color2 12%, transparent 12.5%, transparent 87%, $color2 87.5%, $color2),
+  linear-gradient(60deg, $color3 25%, transparent 25.5%, transparent 75%, $color3 75%, $color3), 
+  linear-gradient(60deg, $color3 25%, transparent 25.5%, transparent 75%, $color3 75%, $color3);
+  background-size:40px 70px;
+  background-position: 0 0, 0 0, 20px 35px, 20px 35px, 0 0, 20px 35px;
 }
+
+
+
+   
