--- a/public/css/flamel-main.css
+++ b/public/css/flamel-main.css
@@ -12,7 +12,7 @@ header {
   margin: 0%;
 }
 header .title-logo {
-  width: 15%;
+  width: auto;
   height: 100%;
   margin: 0%;
   color: black;
@@ -35,12 +35,13 @@ header .title-logo h5 {
   font-weight: 700;
 }
 header .title-center {
-  width: 60%;
+  width: auto;
   height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  position: relative;
 }
 header .title-center .title-center-city {
   height: 3rem;
@@ -65,7 +66,7 @@ header .title-center .title-center-search {
   align-items: flex-start;
 }
 header nav {
-  width: 15%;
+  width: auto;
   height: 100%;
   display: flex;
   flex-direction: row;
@@ -73,42 +74,56 @@ header nav {
   font-weight: 900;
   margin: 1rem;
 }
-header nav .createlisting {
-  margin: 0.5rem;
-  height: 6rem;
-  width: 6rem;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-  border: 5px, solid, blue;
-}
-header nav .createlisting .create-new-listing {
-  font-weight: 900;
-}
-header nav .user {
-  margin: 0.5rem;
-  height: 6rem;
-  width: 10rem;
-  border-radius: 5px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-}
 header nav a {
+  height: 5rem;
+  width: 6rem;
+  margin: 0.5rem;
+  padding: 0.5rem;
+  background-color: rgba(213, 234, 240, 0.7);
+  border: 5px solid #62bbd3;
+  border-radius: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
   color: black;
+  font-weight: 900;
   text-decoration: none;
 }
-header nav a .login {
-  align-self: stretch;
+header nav .createlisting {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+header nav .user-info {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+header nav .user-info form {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+header nav .user-info form input {
+  height: 5rem;
+  width: 6rem;
+  margin: 0.5rem;
+  padding: 0.5rem;
+  background-color: rgba(213, 234, 240, 0.7);
+  border: 5px solid #62bbd3;
+  border-radius: 30px;
   color: black;
-  text-decoration: none;
+  font-size: 1rem;
   font-weight: 900;
+  text-decoration: none;
 }
 
 footer {
-  height: 7rem;
+  height: 2.5rem;
   width: 100%;
   background-color: #80c9dd;
   display: flex;
@@ -130,10 +145,10 @@ footer nav a {
   color: black;
 }
 footer nav .about {
-  width: 10rem;
+  width: 12rem;
 }
 footer nav .contact {
-  width: 10rem;
+  width: 12rem;
 }
 
 .login-form {
@@ -206,7 +221,15 @@ footer nav .contact {
   margin-top: 1rem;
 }
 
-.offer-detail {
+.offers {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-content: center;
+  width: 80rem;
+}
+.offers .offer-detail {
   height: auto;
   width: 15rem;
   display: flex;
@@ -221,11 +244,19 @@ footer nav .contact {
   margin: 0.5rem;
 }
 
-.request-detail {
+.requests {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-content: center;
+  width: 80rem;
+}
+.requests .request-detail {
   height: auto;
   width: 15rem;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   align-content: center;
@@ -234,6 +265,59 @@ footer nav .contact {
   border-radius: 30px;
   padding: 0.5rem;
   margin: 0.5rem;
+}
+
+#edituser {
+  height: auto;
+  width: 20rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-content: center;
+  background-color: rgba(211, 211, 211, 0.7);
+  border: 5px solid #62bbd3;
+  border-radius: 30px;
+  padding: 2rem;
+}
+
+.listing-detail {
+  height: auto;
+  width: 20rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+  background-color: rgba(211, 211, 211, 0.7);
+  border: 5px solid #62bbd3;
+  border-radius: 30px;
+  padding: 2rem;
+}
+.listing-detail .listing-detail__comment {
+  height: auto;
+  width: 18rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+  background-color: rgba(255, 255, 255, 0.7);
+  border: 5px solid #62bbd3;
+  border-radius: 30px;
+  padding: 1rem;
+}
+.listing-detail .listing-detail__comment .comment-detail {
+  height: auto;
+  width: 16em;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+  background-color: rgba(211, 211, 211, 0.7);
+  border: 5px solid #62bbd3;
+  border-radius: 30px;
+  padding: 2rem;
 }
 
 * {
@@ -250,10 +334,14 @@ footer nav .contact {
 
 body {
   margin: 0;
+  font-family: "Open Sans", sans-serif;
+}
+body input {
+  font-family: "Open Sans", sans-serif;
 }
 
 main {
-  height: 63rem;
+  flex-grow: 1;
   display: flex;
   flex-direction: column;
   justify-content: center;
