--- a/resources/scss/components/header.scss
+++ b/resources/scss/components/header.scss
@@ -1,119 +1,127 @@
 header {
-    // background-color: #80b0ff;
-    background: #80c9dd;
+  // background-color: #80b0ff;
+  background: #80c9dd;
+  color: black;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  min-height: 10rem;
+  align-items: center;
+  height: 10rem;
+  width: 100%;
+  margin: 0%;
+
+  .title-logo {
+    width: auto;
+    height: 100%;
+    margin: 0%;
     color: black;
     display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    min-height: 10rem;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
+    position: relative;
+    img {
+      width: 7rem;
+      height: 7rem;
+      justify-self: center;
+      position: relative;
+      top: 2rem;
+      left: 30%;
+    }
+    h5 {
+      text-align: center;
+      font-weight: 700;
+    }
+  }
+
+  .title-center {
+    width: auto;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     align-items: center;
-    height: 10rem;
-    width: 100%;
-    margin: 0%;
-    
-
-    .title-logo {
-        width: 15%;
-        height: 100%;
-        margin: 0%;
-        color: black;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-content: center;
-        position: relative;
-        img{
-          width: 7rem;
-          height: 7rem;
-          justify-self: center;
-          position: relative;
-          top: 2rem;
-          left: 30%;
-        }
-        h5{
-          text-align: center;
-          font-weight: 700;
-        }
+    position: relative;
+    .title-center-city {
+      height: 3rem;
+      display: flex;
+      flex-direction: row;
+      justify-items: center;
+      align-items: center;
+      margin: 1rem;
+      h2 {
+        font-size: 4rem;
+        font-weight: 900;
+        margin: 2rem;
+      }
+      select {
+        align-self: flex-end;
+      }
     }
-
-    .title-center {
-        width: 60%;
-        height: 100%;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-          .title-center-city{
-            height: 3rem;
-            display: flex;
-            flex-direction: row;
-            justify-items: center;
-            align-items: center;
-            margin: 1rem;
-            h2 {
-              font-size: 4rem;
-              font-weight: 900;
-              margin: 2rem;
-            }
-            select {
-               align-self: flex-end;
-              
-            }
-        }
-        .title-center-search {
-          display: flex;
-          flex-direction: row;
-          height: 1.5rem;
-          align-items: flex-start;
-        }
+    .title-center-search {
+      display: flex;
+      flex-direction: row;
+      height: 1.5rem;
+      align-items: flex-start;
     }
+  }
 
-      
-    nav {
-        width: 15%;
-        height: 100%;
+  nav {
+    width: auto;
+    height: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    font-weight: 900;
+    margin: 1rem;
+    a {
+      height: 5rem;
+      width: 6rem;
+      margin: 0.5rem;
+      padding: 0.5rem;
+      background-color: rgba($color: #d5eaf0, $alpha: 0.7);
+      border: 5px solid #62bbd3;
+      border-radius: 30px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      text-align: center;
+      color: black;
+      font-weight: 900;
+      text-decoration: none;
+    }
+    .createlisting {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      text-align: center;
+    }
+    .user-info {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      form {
         display: flex;
         flex-direction: row;
+        justify-content: center;
         align-items: center;
-        font-weight: 900;
-        margin: 1rem;
-        .createlisting{
-          margin: 0.5rem;
-          height: 6rem;
-          width: 6rem;
-          display: flex;
-          justify-content: center;
-          align-items: center;
-          text-align: center;
-          border: 5px, solid, blue;
-          .create-new-listing {
-            font-weight: 900;
-          }
-        }
-          .user{
-            margin: 0.5rem;
-            height: 6rem;
-            width: 10rem;
-            border-radius: 5px;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            text-align: center;
-          }
-          a{
-            color: black;
-            text-decoration: none; 
-            .login{
-              align-self: stretch;
-              color: black;
-              text-decoration: none;
-              font-weight: 900;
-            }
-          }
-        
-        
-    }
- 
-  }
-  
 
+        input {
+          height: 5rem;
+          width: 6rem;
+          margin: 0.5rem;
+          padding: 0.5rem;
+          background-color: rgba($color: #d5eaf0, $alpha: 0.7);
+          border: 5px solid #62bbd3;
+          border-radius: 30px;
+          color: black;
+          font-size: 1rem;
+          font-weight: 900;
+          text-decoration: none;
+        }
+      }
+    }
+  }
+}
