--- a/resources/scss/components/showrequests.scss
+++ b/resources/scss/components/showrequests.scss
@@ -1,14 +1,22 @@
-.request-detail{
-    height: auto;
-    width: 15rem;
+.requests {
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
     justify-content: center;
-    align-items: center;
     align-content: center;
-    background-color: rgba($color: lightgrey, $alpha: 0.7);
-    border: 5px solid #62bbd3;
-    border-radius: 30px;
-    padding: 0.5rem;
-    margin:0.5rem;
+    width: 80rem; 
+    .request-detail {
+        height: auto;
+        width: 15rem;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        align-content: center;
+        background-color: rgba($color: lightgrey, $alpha: 0.7);
+        border: 5px solid #62bbd3;
+        border-radius: 30px;
+        padding: 0.5rem;
+        margin: 0.5rem;
+    }
 }
