--- a/resources/scss/components/showrequests.scss
+++ b/resources/scss/components/showrequests.scss
@@ -18,5 +18,8 @@
         border-radius: 30px;
         padding: 0.5rem;
         margin: 0.5rem;
+        .request-detail__title{
+            margin: 0%;
+        }
     }
 }
