--- a/resources/scss/components/footer.scss
+++ b/resources/scss/components/footer.scss
@@ -6,23 +6,34 @@ footer {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    margin: 0;
     nav {
         display: flex;
         flex-direction: row;
         justify-content: center;
         align-items: center;
         width: 40%;
+        margin: 0%;
         a {
             font-weight: 900;
-            font-size: 2rem;
+            font-size: 1.5rem;
             text-decoration: none;
             color: black;
+            margin: 0%;
         }
         .about {
-            width: 12rem;    
+            width: 12rem;
+            margin: 0%;
         }
         .contact {
             width: 12rem;
+            margin: 0%;
+        }
+        .icons {
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+            align-items: center;
         }
     }
 }
