--- a/resources/scss/components/header.scss
+++ b/resources/scss/components/header.scss
@@ -32,6 +32,7 @@ header {
     h5 {
       text-align: center;
       font-weight: 700;
+      margin: 1rem;
     }
   }
 
@@ -43,6 +44,7 @@ header {
     justify-content: center;
     align-items: center;
     position: relative;
+    left: 5%;
     .title-center-city {
       height: 3rem;
       display: flex;
