--- a/public/css/flamel-main.css
+++ b/public/css/flamel-main.css
@@ -206,7 +206,7 @@ footer nav .icons {
   justify-content: center;
   align-items: center;
   align-content: center;
-  background-color: rgba(211, 211, 211, 0.7);
+  background-color: rgba(255, 255, 255, 0.7);
   border: 5px solid #62bbd3;
   border-radius: 30px;
   padding: 2rem;
@@ -293,7 +293,7 @@ footer nav .icons {
   flex-direction: column;
   justify-content: center;
   align-content: center;
-  background-color: rgba(211, 211, 211, 0.7);
+  background-color: rgba(255, 255, 255, 0.7);
   border: 5px solid #62bbd3;
   border-radius: 30px;
   padding: 2rem;
@@ -307,7 +307,7 @@ footer nav .icons {
   justify-content: center;
   align-items: center;
   align-content: center;
-  background-color: rgba(211, 211, 211, 0.7);
+  background-color: rgba(255, 255, 255, 0.7);
   border: 5px solid #62bbd3;
   border-radius: 30px;
   padding: 2rem;
@@ -333,7 +333,7 @@ footer nav .icons {
   justify-content: center;
   align-items: center;
   align-content: center;
-  background-color: rgba(211, 211, 211, 0.7);
+  background-color: rgba(255, 255, 255, 0.7);
   border: 5px solid #62bbd3;
   border-radius: 30px;
   padding: 2rem;
@@ -344,7 +344,7 @@ footer nav .icons {
 }
 
 #app {
-  height: 100vh;
+  height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -388,7 +388,7 @@ main .offers .offer-detail {
   justify-content: center;
   align-items: center;
   align-content: center;
-  background-color: rgba(211, 211, 211, 0.7);
+  background-color: rgba(255, 255, 255, 0.7);
   border: 5px solid #62bbd3;
   border-radius: 30px;
   padding: 0.5rem;
@@ -413,7 +413,7 @@ main .requests .request-detail {
   justify-content: center;
   align-items: center;
   align-content: center;
-  background-color: rgba(211, 211, 211, 0.7);
+  background-color: rgba(255, 255, 255, 0.7);
   border: 5px solid #62bbd3;
   border-radius: 30px;
   padding: 0.5rem;
