--- a/resources/scss/components/createlisting.scss
+++ b/resources/scss/components/createlisting.scss
@@ -6,7 +6,7 @@
     justify-content: center;
     align-items: center;
     align-content: center;
-    background-color: rgba($color: lightgrey, $alpha: 0.7);
+    background-color: rgba($color: white, $alpha: 0.7);
     border: 5px solid #62bbd3;
     border-radius: 30px;
     padding: 2rem;
