--- a/resources/scss/components/edituser.scss
+++ b/resources/scss/components/edituser.scss
@@ -5,7 +5,7 @@
     flex-direction: column;
     justify-content: center;
     align-content: center;
-    background-color: rgba($color: lightgrey, $alpha: 0.7);
+    background-color: rgba($color: white, $alpha: 0.7);
     border: 5px solid #62bbd3;
     border-radius: 30px;
     padding: 2rem;
