--- a/public/css/flamel-main.css
+++ b/public/css/flamel-main.css
@@ -339,12 +339,16 @@ footer nav .icons {
   padding: 2rem;
 }
 
+html {
+  height: 100%;
+}
+
 * {
   box-sizing: border-box;
 }
 
 #app {
-  height: 100%;
+  min-height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -352,8 +356,12 @@ footer nav .icons {
 }
 
 body {
-  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-content: center;
   margin: 0;
+  padding: 0;
   font-family: "Open Sans", sans-serif;
 }
 body input {
