--- a/resources/scss/flamel-main.scss
+++ b/resources/scss/flamel-main.scss
@@ -9,20 +9,29 @@
 @import 'components/edituser.scss';
 @import 'components/listing.scss';
 
+html {
+  height: 100%;
+}
 * {
   box-sizing: border-box;
 }
 
-#app{
-  height: 100%;
+ #app{
+  min-height: 100%;
+//   width: 100%; 
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   align-content: center; 
-}
+ }
 body{
-  height: 100%;
+  // min-height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-content: center;
   margin: 0;
+  padding: 0;
   font-family: 'Open Sans', sans-serif;
   input{
     font-family: 'Open Sans', sans-serif;
